{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 30,
  "lineage": "7df565e7-5f11-83ee-0ff3-7cffb3a27969",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/metroc-project-456121/global/networks/default",
            "name": "default",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/me-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-west9/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/asia-east2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/us-east5/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-west12/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-west10/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-north2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/africa-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/northamerica-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/us-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-southwest1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/me-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/regions/europe-west3/subnetworks/default"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "app_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/zones/us-central1-a/instanceGroups/app-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-05-13T15:46:27.696-07:00",
            "enable_cdn": false,
            "fingerprint": "t37bNMzMHvs=",
            "generated_id": 7708941939710522668,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/httpHealthChecks/app-health-check"
            ],
            "id": "projects/metroc-project-456121/global/backendServices/app-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-backend-service",
            "port_name": "http",
            "project": "metroc-project-456121",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/backendServices/app-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "data.google_compute_network.default",
            "google_compute_http_health_check.app_health_check",
            "google_compute_instance_group_manager.app_mig",
            "google_compute_instance_template.app_template"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/zones/us-central1-a/instanceGroups/web-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-05-13T15:46:26.618-07:00",
            "enable_cdn": false,
            "fingerprint": "c3cBadzdhKM=",
            "generated_id": 8930371209230447917,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/httpHealthChecks/web-health-check"
            ],
            "id": "projects/metroc-project-456121/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "metroc-project-456121",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "data.google_compute_network.default",
            "google_compute_http_health_check.web_health_check",
            "google_compute_instance_group_manager.web_mig",
            "google_compute_instance_template.web_template"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-06T15:49:04.098-07:00",
            "deny": [],
            "description": "Allow HTTP traffic from the internet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metroc-project-456121/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/networks/default",
            "priority": 1000,
            "project": "metroc-project-456121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app-server",
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-13T15:45:52.807-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metroc-project-456121/global/firewalls/allow-http-web",
            "log_config": [],
            "name": "allow-http-web",
            "network": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/networks/default",
            "priority": 1000,
            "project": "metroc-project-456121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/firewalls/allow-http-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "app_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.119.1",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-05-13T15:45:52.666-07:00",
            "id": "projects/metroc-project-456121/global/addresses/app-ip",
            "name": "app-ip",
            "prefix_length": 0,
            "project": "metroc-project-456121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/addresses/app-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "web_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.8.247.202",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-05-13T15:45:52.697-07:00",
            "id": "projects/metroc-project-456121/global/addresses/web-ip",
            "name": "web-ip",
            "prefix_length": 0,
            "project": "metroc-project-456121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/addresses/web-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "app_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/metroc-project-456121/global/forwardingRules/app-forwarding-rule",
            "ip_address": "34.120.119.1",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-forwarding-rule",
            "port_range": "80-80",
            "project": "metroc-project-456121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/forwardingRules/app-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/targetHttpProxies/app-http-proxy"
          },
          "dependencies": [
            "data.google_compute_network.default",
            "google_compute_backend_service.app_backend_service",
            "google_compute_global_address.app_ip",
            "google_compute_http_health_check.app_health_check",
            "google_compute_instance_group_manager.app_mig",
            "google_compute_instance_template.app_template",
            "google_compute_target_http_proxy.app_http_proxy",
            "google_compute_url_map.app_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "web_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/metroc-project-456121/global/forwardingRules/web-forwarding-rule",
            "ip_address": "34.8.247.202",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-forwarding-rule",
            "port_range": "80-80",
            "project": "metroc-project-456121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/forwardingRules/web-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/targetHttpProxies/web-http-proxy"
          },
          "dependencies": [
            "data.google_compute_network.default",
            "google_compute_backend_service.web_backend_service",
            "google_compute_global_address.web_ip",
            "google_compute_http_health_check.web_health_check",
            "google_compute_instance_group_manager.web_mig",
            "google_compute_instance_template.web_template",
            "google_compute_target_http_proxy.web_http_proxy",
            "google_compute_url_map.web_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "app_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-13T15:48:00.967-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/metroc-project-456121/global/targetHttpProxies/app-http-proxy",
            "name": "app-http-proxy",
            "project": "metroc-project-456121",
            "proxy_bind": false,
            "proxy_id": 2041532116450046671,
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/targetHttpProxies/app-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/urlMaps/app-url-map"
          },
          "dependencies": [
            "data.google_compute_network.default",
            "google_compute_backend_service.app_backend_service",
            "google_compute_http_health_check.app_health_check",
            "google_compute_instance_group_manager.app_mig",
            "google_compute_instance_template.app_template",
            "google_compute_url_map.app_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "web_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-13T15:48:09.798-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/metroc-project-456121/global/targetHttpProxies/web-http-proxy",
            "name": "web-http-proxy",
            "project": "metroc-project-456121",
            "proxy_bind": false,
            "proxy_id": 6416403164413457094,
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/targetHttpProxies/web-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/urlMaps/web-url-map"
          },
          "dependencies": [
            "data.google_compute_network.default",
            "google_compute_backend_service.web_backend_service",
            "google_compute_http_health_check.web_health_check",
            "google_compute_instance_group_manager.web_mig",
            "google_compute_instance_template.web_template",
            "google_compute_url_map.web_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "app_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-13T15:47:49.957-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/backendServices/app-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "vc2q0ZgXRJY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/metroc-project-456121/global/urlMaps/app-url-map",
            "map_id": 7137173379048436474,
            "name": "app-url-map",
            "path_matcher": [],
            "project": "metroc-project-456121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/urlMaps/app-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default",
            "google_compute_backend_service.app_backend_service",
            "google_compute_http_health_check.app_health_check",
            "google_compute_instance_group_manager.app_mig",
            "google_compute_instance_template.app_template"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "web_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-13T15:47:58.878-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Zfw9JkqkWWc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/metroc-project-456121/global/urlMaps/web-url-map",
            "map_id": 3291413083289711345,
            "name": "web-url-map",
            "path_matcher": [],
            "project": "metroc-project-456121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metroc-project-456121/global/urlMaps/web-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default",
            "google_compute_backend_service.web_backend_service",
            "google_compute_http_health_check.web_health_check",
            "google_compute_instance_group_manager.web_mig",
            "google_compute_instance_template.web_template"
          ]
        }
      ]
    }
  ]
}